--- a/index.html
+++ b/index.html
@@ -47,7 +47,16 @@
           <h3>{{m.original_title}} </h3>
           <span class="ray">Title : {{m.title}}</span>
 
-          <span class="ray">Language : {{m.original_language}}</span>
+          <!-- <span class="ray" >Language : {{m.original_language}}</span> -->
+             <div class="lani">
+
+
+            <img v-if="m.original_language == 'en' " src="https://media.istockphoto.com/photos/full-frame-image-of-england-flag-picture-id479199262?b=1&k=6&m=479199262&s=170667a&w=0&h=sH0p8ZZNIajvX-0CRPPmXfXWWRErSlXFYQ8g5ldQR0M=" alt="english-language">
+            <img v-if= "m.original_language == 'ja' "src="https://media.istockphoto.com/photos/flag-of-japan-waving-background-picture-id983149640?b=1&k=6&m=983149640&s=170667a&w=0&h=wSZtBFvVjI2BGK9v0gZCJt3YizCbMyxJzOOb_hsgVn8=" alt="japanese-language">
+            <img v-if= "m.original_language == 'it' "src="https://media.istockphoto.com/photos/flag-of-italy-picture-id585788002?b=1&k=6&m=585788002&s=170667a&w=0&h=6YPTtY-iPjWsdBWyoVm6IDXBFWtgg5AenxjG67gYS0Y=" alt="italian-language">
+
+
+            </div>
 
           <ul>
             <li>
